exports[`no-assert-in-describe > invalid(1): import {describe, it, test} from 'node:test';\nimport assert from 'node:assert';\ndescribe(\"s\", () => { assert.ok(x); it(\"a\", () => {}); }); 1`] = `

  1 | import {describe, it, test} from 'node:test';
  2 | import assert from 'node:assert';
  3 | describe("s", () => { assert.ok(x); it("a", () => {}); });

`;

exports[`no-assert-in-describe > invalid(1): import {describe, it, test} from 'node:test';\nimport assert from 'node:assert';\ndescribe(\"s\", () => { assert.ok(x); it(\"a\", () => {}); }); 2`] = `

Message:
  1 | import {describe, it, test} from 'node:test';
  2 | import assert from 'node:assert';
> 3 | describe("s", () => { assert.ok(x); it("a", () => {}); });
    |                       ^^^^^^^^^^^^ Assertion runs when the suite is built, not when a test runs. Move it into a test or hook.

`;

exports[`no-assert-in-describe > invalid(2): import {describe, it, test} from 'node:test';\nimport assert from 'node:assert';\ndescribe(\"s\", () => { assert(x); }); 1`] = `

  1 | import {describe, it, test} from 'node:test';
  2 | import assert from 'node:assert';
  3 | describe("s", () => { assert(x); });

`;

exports[`no-assert-in-describe > invalid(2): import {describe, it, test} from 'node:test';\nimport assert from 'node:assert';\ndescribe(\"s\", () => { assert(x); }); 2`] = `

Message:
  1 | import {describe, it, test} from 'node:test';
  2 | import assert from 'node:assert';
> 3 | describe("s", () => { assert(x); });
    |                       ^^^^^^^^^ Assertion runs when the suite is built, not when a test runs. Move it into a test or hook.

`;

exports[`no-assert-in-describe > invalid(3): import {describe, it, test} from 'node:test';\nimport assert from 'node:assert';\ndescribe(\"s\", () => { if (y) { assert.strictEqual(a, b); } }); 1`] = `

  1 | import {describe, it, test} from 'node:test';
  2 | import assert from 'node:assert';
  3 | describe("s", () => { if (y) { assert.strictEqual(a, b); } });

`;

exports[`no-assert-in-describe > invalid(3): import {describe, it, test} from 'node:test';\nimport assert from 'node:assert';\ndescribe(\"s\", () => { if (y) { assert.strictEqual(a, b); } }); 2`] = `

Message:
  1 | import {describe, it, test} from 'node:test';
  2 | import assert from 'node:assert';
> 3 | describe("s", () => { if (y) { assert.strictEqual(a, b); } });
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^ Assertion runs when the suite is built, not when a test runs. Move it into a test or hook.

`;

exports[`no-assert-in-describe > invalid(4): import {describe, it, test} from 'node:test';\nimport assert from 'node:assert';\nimport {suite} from 'node:test';\nsuite(\"s\", () => { assert.deepStrictEqual(a, b); }); 1`] = `

  1 | import {describe, it, test} from 'node:test';
  2 | import assert from 'node:assert';
  3 | import {suite} from 'node:test';
  4 | suite("s", () => { assert.deepStrictEqual(a, b); });

`;

exports[`no-assert-in-describe > invalid(4): import {describe, it, test} from 'node:test';\nimport assert from 'node:assert';\nimport {suite} from 'node:test';\nsuite(\"s\", () => { assert.deepStrictEqual(a, b); }); 2`] = `

Message:
  1 | import {describe, it, test} from 'node:test';
  2 | import assert from 'node:assert';
  3 | import {suite} from 'node:test';
> 4 | suite("s", () => { assert.deepStrictEqual(a, b); });
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion runs when the suite is built, not when a test runs. Move it into a test or hook.

`;

exports[`no-assert-in-describe > invalid(5): import {describe, it, test} from 'node:test';\nimport assert from 'node:assert';\ndescribe(\"outer\", () => { describe(\"inner\", () => { assert.ok(x); }); }); 1`] = `

  1 | import {describe, it, test} from 'node:test';
  2 | import assert from 'node:assert';
  3 | describe("outer", () => { describe("inner", () => { assert.ok(x); }); });

`;

exports[`no-assert-in-describe > invalid(5): import {describe, it, test} from 'node:test';\nimport assert from 'node:assert';\ndescribe(\"outer\", () => { describe(\"inner\", () => { assert.ok(x); }); }); 2`] = `

Message:
  1 | import {describe, it, test} from 'node:test';
  2 | import assert from 'node:assert';
> 3 | describe("outer", () => { describe("inner", () => { assert.ok(x); }); });
    |                                                     ^^^^^^^^^^^^ Assertion runs when the suite is built, not when a test runs. Move it into a test or hook.

`;

exports[`no-assert-in-describe > invalid(6): import {describe} from 'node:test';\nimport {ok} from 'node:assert';\ndescribe(\"s\", () => { ok(x); }); 1`] = `

  1 | import {describe} from 'node:test';
  2 | import {ok} from 'node:assert';
  3 | describe("s", () => { ok(x); });

`;

exports[`no-assert-in-describe > invalid(6): import {describe} from 'node:test';\nimport {ok} from 'node:assert';\ndescribe(\"s\", () => { ok(x); }); 2`] = `

Message:
  1 | import {describe} from 'node:test';
  2 | import {ok} from 'node:assert';
> 3 | describe("s", () => { ok(x); });
    |                       ^^^^^ Assertion runs when the suite is built, not when a test runs. Move it into a test or hook.

`;

exports[`no-assert-in-describe > invalid(7): import {describe, it, test} from 'node:test';\nimport assert from 'node:assert';\ndescribe(\"s\", () => { assert.ok(x as boolean); }); 1`] = `

  1 | import {describe, it, test} from 'node:test';
  2 | import assert from 'node:assert';
  3 | describe("s", () => { assert.ok(x as boolean); });

`;

exports[`no-assert-in-describe > invalid(7): import {describe, it, test} from 'node:test';\nimport assert from 'node:assert';\ndescribe(\"s\", () => { assert.ok(x as boolean); }); 2`] = `

Message:
  1 | import {describe, it, test} from 'node:test';
  2 | import assert from 'node:assert';
> 3 | describe("s", () => { assert.ok(x as boolean); });
    |                       ^^^^^^^^^^^^^^^^^^^^^^^ Assertion runs when the suite is built, not when a test runs. Move it into a test or hook.

`;
